Sun Jun 13 02:17:49 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/utf8_mac.trans (buf_apply): fix for patterns
	  whose result is 2 bytes. [ruby-core:30751]

Sun Jun 13 01:40:52 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* time.c (rb_localtime_r2): fix mixed declarations and code.

Sun Jun 13 01:37:40 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/dl/lib/dl.rb: don't require when already loaded.

Sun Jun 13 01:37:08 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/fiddle/closure.c (dealloc): workaround fix for libffi's
	  ffi_closure_free. [ruby-dev:41483] [ruby-dev:41214]

Fri Jun 11 23:21:35 2010  Tanaka Akira  <akr@fsij.org>

	* time.c (init_leap_second_info): check the result of
	  gmtime_with_leapsecond.

Fri Jun 11 22:39:50 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/rubygems/install_update_options.rb
	  (Gem::InstallUpdateOptions#add_install_update_options): deprecate
	  --test option which has not worked.  [ruby-core:21714]
	
	* test/rubygems/test_gem_command_manager.rb: ditto.

Fri Jun 11 22:36:25 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* README: add a note about linking a library whose license is not
	  compatible with Ruby License.  [ruby-core:30662]

Sun Jun  6 19:55:21 2010  Tanaka Akira  <akr@fsij.org>

	* array.c (rb_ary_product): clear uninitialized elements in temporary
	  array.

Sat Jun  5 06:20:57 2010  Eric Hodel  <drbrain@segment7.net>

	* dir.c: Clarification of what '*' matches.  Patch by John Wells
	  <john.wells at greatworx.com>

Thu Jun  3 00:58:45 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/dl/lib/dl/cparser.rb (parse_ctype): add backwards compatibility
	  by supporting "uint" types in the c parser. [ruby-core:29750]
	* test/dl/test_cparser.rb: adding a test for "uint" changes.

Wed Jun  2 11:40:02 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* compile.c (iseq_compile_each): should consider block on stack,
	  if block argument is passed.  [ruby-core:30534]
